Update "Features" section on homepage
- Remove incorrect paragraph about post fetching
- Add paragraph about fixed <pubDate>

--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,8 @@
       </div>
       <div class="col-sm-6 col-lg-6">
         <h4>Особенности</h4>
-        <p>Посты собираются с&nbsp;первой страницы <a href="http://d3.ru/">d3.ru</a>. Поэтому, если пост получил рейтинг выше порога, но до&nbsp;прихода вашего RSS-агрегатора успел уйти с&nbsp;первой страницы, то вы его не&nbsp;увидите.</p>
         <p>При формировании ленты YouTube-видео заменяется на&nbsp;картинку (со&nbsp;ссылкой на&nbsp;ролик). Это удобно, потому&nbsp;что большинство RSS-агрегаторов при импорте записей вырезают &lt;iframe&gt; с&nbsp;видео (как потенциально опасный контент), а&nbsp;картинки не&nbsp;вырезают.</p>
+        <p>Кроме того, корректируется дата и&nbsp;время поста (в&nbsp;оригинальных RSS-лентах на&nbsp;d3 присутствует сдвиг на&nbsp;четыре часа).</p>
       </div>
     </div>
   </div>
