Upgrade Bootstrap to v3.0.0 Final
And tweak some styles

--- a/public/index.html
+++ b/public/index.html
@@ -38,14 +38,14 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-6 col-lg-6">
+      <div class="col-sm-6">
         <h4>Зачем это нужно?</h4>
         <p>До реформы 2012 года на <a href="http://d3.ru/">Большом Дёрти</a> были специальные RSS-ленты для постов с&nbsp;рейтингом выше определённого порога: «Больше&nbsp;25»<a href="http://dirty.ru/rss_5.xml" title="Эта лента больше не работает">*</a>, «Больше&nbsp;100»<a href="http://dirty.ru/rss_6.xml" title="Эта лента больше не работает">**</a>, и моя любимая, «Больше 250»<a href="http://dirty.ru/rss_7.xml" title="Эта лента больше не работает">***</a>.</p>
         <p>При переделке сайта RSS пропал, и&nbsp;тогда для&nbsp;чтения лучших постов я&nbsp;сделал d3feed.ru.</p>
         <p>Позже RSS на d3.ru вернулся, и&nbsp;среди его многочисленных вариантов были два «классических»: с&nbsp;порогом <a href="http://d3.ru/rss/new/?threshold=25">25</a> и&nbsp;<a href="http://d3.ru/rss/new/?threshold=250">250</a>. Но к&nbsp;тому времени я уже привык экономить время с&nbsp;лентой «Больше&nbsp;500», которой на d3 нет.</p>
         <p>Буду рад, если и вам пригодится.</p>
       </div>
-      <div class="col-sm-6 col-lg-6">
+      <div class="col-sm-6">
         <h4>Особенности</h4>
         <p>При формировании ленты YouTube-видео заменяется на&nbsp;картинку (со&nbsp;ссылкой на&nbsp;ролик). Это удобно, потому&nbsp;что большинство RSS-агрегаторов при импорте записей вырезают &lt;iframe&gt; с&nbsp;видео (как потенциально опасный контент), а&nbsp;картинки не&nbsp;вырезают.</p>
         <p>Кроме того, корректируется дата и&nbsp;время поста (в&nbsp;оригинальных RSS-лентах на&nbsp;d3 присутствует сдвиг на&nbsp;четыре часа).</p>
